src/objects/collect__Queue_Contract__c.object
<CustomObject>
    <fields>
        <fullName>collect__Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Days_Past_Due__c</fullName>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Delinquent_Amount__c</fullName>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>collect__Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Lease_Account_Id__c</fullName>
        <label>Lease Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Queue__c</fullName>
        <label>Queue</label>
        <referenceTo>collect__Queue__c</referenceTo>
        <relationshipLabel>Queue Contracts</relationshipLabel>
        <relationshipName>Queue_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>collect__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Queue Contract</label>
    <nameField>
        <label>Queue Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>